Moved over continuous integration and deployment from travis-ci.org to GitHub Actions (#1003)
* Added support for marginal test results to the protos.

* Added continuous integration and deployment via GitHub Action instead of travis-ci.org

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,11 @@
 [tox]
 envlist = py36,py37
 
+[gh-actions]
+python =
+    3.6: py36
+    3.7: py37
+
 [testenv]
 deps = -r{toxinidir}/test_reqs.txt
 commands = {envbindir}/python setup.py build_proto
